[gd_scene load_steps=7 format=3 uid="uid://drw2of6u7hb5b"]

[ext_resource type="Texture2D" uid="uid://dbys8wqeufkii" path="res://assets/objects/fresh_snow.png" id="1_gnf3m"]
[ext_resource type="Script" path="res://scripts/components/collectable_item.gd" id="2_ohocl"]
[ext_resource type="Script" path="res://scenes/objects/fresh_snow.gd" id="2_qg8oq"]
[ext_resource type="Resource" uid="uid://cporn16b38m2p" path="res://resources/items/snowball_resource.tres" id="4_8j61t"]
[ext_resource type="PackedScene" uid="uid://c4exovrcqgwjg" path="res://scenes/ui/misc/sparkle_notification.tscn" id="4_go12p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bvyur"]
radius = 18.0

[node name="FreshSnow" type="Sprite2D"]
texture = ExtResource("1_gnf3m")
offset = Vector2(2.08165e-12, 16)
script = ExtResource("2_qg8oq")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(5, 6)
remote_path = NodePath("../CanvasLayer/SparkleNotification")
update_rotation = false
update_scale = false

[node name="CollectableItem" type="Area2D" parent="."]
script = ExtResource("2_ohocl")
does_respawn = true
resource = ExtResource("4_8j61t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableItem"]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_bvyur")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SparkleNotification" parent="CanvasLayer" instance=ExtResource("4_go12p")]
visible = false
position = Vector2(5, 6)

[connection signal="collected" from="CollectableItem" to="." method="_on_collectable_item_collected"]
[connection signal="player_entered" from="CollectableItem" to="." method="_on_collectable_item_player_entered"]
[connection signal="player_exited" from="CollectableItem" to="." method="_on_collectable_item_player_exited"]
